New payload structure

--- a/saleor/plugins/user_email/default_email_templates/gift_card.html
+++ b/saleor/plugins/user_email/default_email_templates/gift_card.html
@@ -130,7 +130,7 @@
                         <div
                           style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:left;color:#000000;">
                           You have received new gift card in {{ site_name }}!
-                          The gift card code is: {{ code }}</div>
+                          The gift card code is: {{ gift_card.code }}</div>
 
                       </td>
                     </tr>
