Gift cards - email context with more data

--- a/saleor/plugins/user_email/default_email_templates/gift_card.html
+++ b/saleor/plugins/user_email/default_email_templates/gift_card.html
@@ -119,7 +119,8 @@
 
                         <div
                           style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
-                          Hi!</div>
+                          Hi, {{ recipient.name }}
+                          Here is your gift card!</div>
 
                       </td>
                     </tr>
@@ -129,8 +130,31 @@
 
                         <div
                           style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:left;color:#000000;">
-                          You have received new gift card in {{ site_name }}!
-                          The gift card code is: {{ gift_card.code }}</div>
+                          {{ gift_card.currency }} {{ gift_card.balance }}
+                          Gift card code: {{ gift_card.code }}</div>
+
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td align="left" style="font-size: 0px; padding: 10px 25px; word-break: break-word;">
+
+                        <div
+                          style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:left;color:#000000;">
+                          Use this card as payment for anything you like in {{ site_name }}.
+                          Enter the gift card code at checkout to redeem your gift card.</div>
+
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <td align="left" style="font-size: 0px; padding: 10px 25px; word-break: break-word;">
+
+                        <div
+                          style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:left;color:#000000;">
+                          <a href="{{ domain }}">
+                            {{ site_name }}
+                          </a></div>
 
                       </td>
                     </tr>
