Email context improvements

--- a/saleor/plugins/user_email/default_email_templates/gift_card.html
+++ b/saleor/plugins/user_email/default_email_templates/gift_card.html
@@ -119,8 +119,8 @@
 
                         <div
                           style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
-                          Hi, {{ recipient.name }}
-                          Here is your gift card!</div>
+                          Hi, {{ recipient.name }}<br>
+                          Here is your gift card!<br></div>
 
                       </td>
                     </tr>
@@ -130,8 +130,8 @@
 
                         <div
                           style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:left;color:#000000;">
-                          {{ gift_card.currency }} {{ gift_card.balance }}
-                          Gift card code: {{ gift_card.code }}</div>
+                          {{ gift_card.currency }} {{ gift_card.balance }}<br>
+                          Gift card code: {{ gift_card.code }}<br></div>
 
                       </td>
                     </tr>
@@ -141,8 +141,8 @@
 
                         <div
                           style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:left;color:#000000;">
-                          Use this card as payment for anything you like in {{ site_name }}.
-                          Enter the gift card code at checkout to redeem your gift card.</div>
+                          Use this card as payment for anything you like in {{ site_name }}.<br>
+                          Enter the gift card code at checkout to redeem your gift card.<br></div>
 
                       </td>
                     </tr>
