--- a/saleor/plugins/user_email/default_email_templates/gift_card.html
+++ b/saleor/plugins/user_email/default_email_templates/gift_card.html
@@ -120,7 +120,7 @@
                         <div
                           style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#000000;">
                           {{#if recipient.first_name}}
-                          Hi, {{ recipient.first_name }} {{ recipient.first_name }}<br>
+                          Hi, {{ recipient.first_name }} {{ recipient.last_name }}<br>
                           {{else}}
                           Hi, {{ recipient_email }}
                           {{/if}}
